Made body, navbar and contact background color a bit brighter, Added outline to input and textarea on focus.

--- a/styles.css
+++ b/styles.css
@@ -3,16 +3,20 @@
 }
 
 body {
-  background-color: #0f0f0f;
+  background-color: #222222;
   margin: 0;
   padding: 0;
   font-family: "europa", sans-serif;
-  color: #0f0f0f;
+  color: #222222;
+}
+
+h1 {
+  color: #222222;
 }
 
 #navbar {
   position: fixed;
-  background-color: #0f0f0f;
+  background-color: #222222;
   width: 100%;
   display: flex;
   justify-content: flex-end;
@@ -150,7 +154,7 @@ body {
 }
 
 #contact {
-  background-color: #0f0f0f;
+  background-color: #222222;
   height: 80vh;
 }
 
@@ -183,6 +187,10 @@ textarea {
   min-height: 200px;
 }
 
+input:focus, textarea:focus {
+  outline: 1px solid orange;
+}
+
 .icon-section {
   display: flex;
   justify-content: center;
@@ -190,7 +198,7 @@ textarea {
 }
 
 .icon-container {
-  background-color: #0f0f0f;
+  background-color: #222222;
   border: 1px solid white;
   border-radius: 10px;
   margin: 0 20px;
