--- a/styles.css
+++ b/styles.css
@@ -257,6 +257,19 @@ textarea:focus {
 }
 
 @media only screen and (min-width: 600px) {
+  #navbar > ul {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
+
+  #navbar > ul > a {
+    font-size: 1.4rem;
+  }
+
+  .about-heading, .about-text, .skill-card, .project-tile {
+    width: 80%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
