--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ h1 {
 
 #welcome-section {
   background-color: white;
-  padding: 120px 0 0 0;
+  padding: 120px 0 10px 0;
   width: 100%;
   height: 100vh;
 }
@@ -88,7 +88,7 @@ h1 {
   text-align: center;
   line-height: 1.8rem;
   font-size: 1.2rem;
-  margin: auto;
+  margin: 20px auto;
 }
 
 #skills {
@@ -136,7 +136,7 @@ h1 {
 .skill-text-section > p {
   margin: 0 auto;
   width: 80%;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.5;
 }
 
@@ -273,6 +273,25 @@ textarea:focus {
 }
 
 @media only screen and (min-width: 768px) {
+  #welcome-section {
+    min-height: 100vh;
+    height: fit-content;
+  }
+
+  #skills {
+    display: flex;
+  }
+
+  .skill-card {
+    width: 27%;
+  }
+
+  .projects-grid {
+    display: grid;
+    grid-template-columns: 400px 400px;
+    grid-gap: 0.5rem;
+    justify-content: center;
+  }
 }
 
 @media only screen and (min-width: 992px) {
