Styled about container, removed repeated styles, updated styles of project-grid in different breakpoints.

--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
 
 ::-webkit-scrollbar {
   border-radius: 15px;
-  width: 8px;
+  width: 13px;
   height: 8px;
 }
 
@@ -15,10 +15,7 @@
 ::-webkit-scrollbar-thumb {
   border-radius: 15px;
   background: #888;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  box-shadow: 10px 15px 5px #4d4d4d inset;
 }
 
 body {
@@ -73,19 +70,21 @@ h1 {
   height: 100vh;
 }
 
-.about-heading {
+.about-container {
   width: 90%;
-  margin: 50px auto;
-  font-size: 2.1rem;
+  margin: 0 auto;
   text-align: center;
 }
 
+.about-heading {
+  margin: 50px auto;
+  font-size: 2.1rem;
+}
+
 .about-text {
-  width: 90%;
-  text-align: center;
-  line-height: 1.8rem;
-  font-size: 1.2rem;
   margin: 20px auto;
+  font-size: 1.1rem;
+  line-height: 1.8rem;
 }
 
 #skills {
@@ -99,7 +98,7 @@ h1 {
   border-radius: 10px;
   margin: 20px auto;
   width: 95%;
-  height: 100%;
+  /* height: 100%; */
   padding-bottom: 30px;
 }
 
@@ -121,7 +120,7 @@ h1 {
   text-align: center;
 }
 
-.skill-text-section > h3 {
+#contact > p .skill-text-section > h3 {
   margin-bottom: 30px;
   font-family: "Nanum Gothic Coding", monospace;
   font-size: 1.4rem;
@@ -130,7 +129,7 @@ h1 {
 .skill-text-section > p {
   margin: 0 auto;
   width: 80%;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
   line-height: 1.5;
 }
 
@@ -153,7 +152,7 @@ h1 {
   background-color: white;
   border-radius: 5px;
   width: 90%;
-  height: fit-content;
+  /* height: fit-content; */
   margin: 0 auto 20px;
 }
 
@@ -170,11 +169,13 @@ h1 {
 }
 
 .project-name {
-  background-color: gray;
+  background-color: white;
+  border: 1px solid black;
   border-radius: 3px;
   padding: 5px 0;
   text-align: center;
   font-size: 1.2rem;
+  color: black;
 }
 
 .project-name > p {
@@ -191,7 +192,7 @@ h1 {
   color: white;
 }
 #contact > p {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   text-align: center;
   color: white;
 }
@@ -216,7 +217,7 @@ textarea {
 
 input:focus,
 textarea:focus {
-  outline: 1px solid orange;
+  outline: 2px solid orange;
 }
 
 .icon-section {
@@ -232,6 +233,8 @@ textarea:focus {
   margin: 0 20px;
   width: 60px;
   height: 60px;
+
+  transition: background-color 0.5s;
 }
 
 .icon-container > i {
@@ -240,6 +243,16 @@ textarea:focus {
   left: 9px;
   font-size: 40px;
   color: white;
+
+  transition: color 0.5s;
+}
+
+.icon-container:hover {
+  background-color: white;
+}
+
+.icon-container > i:hover {
+  color: #222222;
 }
 
 @media only screen and (min-width: 600px) {
@@ -253,8 +266,7 @@ textarea:focus {
     font-size: 1.4rem;
   }
 
-  .about-heading,
-  .about-text,
+  .about-container,
   .skill-card,
   .project-tile {
     width: 80%;
@@ -280,7 +292,8 @@ textarea:focus {
   .projects-grid {
     display: grid;
     grid-template-columns: 400px 400px;
-    grid-gap: 0.5rem;
+    grid-template-rows: 320px 320px;
+    grid-gap: 2rem;
     justify-content: center;
   }
 
@@ -291,7 +304,8 @@ textarea:focus {
 
 @media only screen and (min-width: 992px) {
   .projects-grid {
-    grid-template-columns: 320px 320px 320px;
+    grid-template-columns: 400px 400px 400px;
+    grid-template-rows: 320px 320px 320px;
     grid-gap: 1rem;
   }
 
@@ -305,14 +319,14 @@ textarea:focus {
     display: none;
   }
 
-  .about-heading,
-  .about-text,
+  .about-container,
   .skill-card-container {
     width: 60%;
   }
 
   .projects-grid {
     grid-template-columns: 400px 400px 400px;
+    grid-template-rows: 320px 320px 320px;
     grid-gap: 1rem;
   }
 
