--- a/styles.css
+++ b/styles.css
@@ -93,12 +93,15 @@ h1 {
   padding: 15px 0;
 }
 
+.skills-container {
+  margin: 0 auto;
+}
+
 .skill-card {
   background-color: white;
   border-radius: 10px;
   margin: 20px auto;
   width: 95%;
-  /* height: 100%; */
   padding-bottom: 30px;
 }
 
@@ -137,10 +140,12 @@ h1 {
   background-color: #f5f5f5;
   height: fit-content;
   padding: 50px 0 100px;
+  text-align: center;
 }
 
-.projects-heading {
-  text-align: center;
+.projects-container {
+  margin: 0 auto;
+  width: 95%;
 }
 
 .projects-grid {
@@ -151,7 +156,7 @@ h1 {
 .project-tile {
   background-color: white;
   border-radius: 5px;
-  width: 90%;
+  width: 95%;
   /* height: fit-content; */
   margin: 0 auto 20px;
 }
@@ -267,9 +272,13 @@ textarea:focus {
   }
 
   .about-container,
-  .skill-card,
-  .project-tile {
+  .skills-container,
+  .projects-container {
     width: 80%;
+  }
+
+  .project-tile {
+    max-width: 450px;
   }
 }
 
@@ -279,7 +288,7 @@ textarea:focus {
     height: fit-content;
   }
 
-  .skill-card-container {
+  .skills-container {
     display: flex;
     width: 90%;
     margin: 0 auto;
@@ -291,9 +300,9 @@ textarea:focus {
 
   .projects-grid {
     display: grid;
-    grid-template-columns: 400px 400px;
-    grid-template-rows: 320px 320px;
-    grid-gap: 2rem;
+    grid-template-columns: 380px 380px;
+    grid-template-rows: 300px 300px;
+    grid-gap: 1rem;
     justify-content: center;
   }
 
@@ -304,8 +313,8 @@ textarea:focus {
 
 @media only screen and (min-width: 992px) {
   .projects-grid {
-    grid-template-columns: 400px 400px 400px;
-    grid-template-rows: 320px 320px 320px;
+    grid-template-columns: 320px 320px 320px;
+    grid-template-rows: 270px 270px 270px;
     grid-gap: 1rem;
   }
 
@@ -320,8 +329,8 @@ textarea:focus {
   }
 
   .about-container,
-  .skill-card-container {
-    width: 60%;
+  .skills-container {
+    width: 80%;
   }
 
   .projects-grid {
