--- a/styles.css
+++ b/styles.css
@@ -172,16 +172,22 @@ h1 {
 }
 
 .skill-icon-section {
-  display: flex;
   height: 30%;
 }
 
-.skill-icon-section > .fa-solid {
+.skill-icon-container {
+  display: flex;
   background-color: var(--skills-icon-section-fa-solid-background);
   border-radius: 50px;
   width: 80px;
   height: 80px;
   margin: 50px auto;
+}
+
+.skill-icon-container > .fa-solid {
+  position: relative;
+  top: 20px;
+  left: 18px;
   font-size: 2.4rem;
 }
 
