--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
 }
 
 :root {
+  --border-radius: 30px;
+
   --black: #222222;
   --lighter-black: #252934;
 
@@ -75,7 +77,7 @@
 }
 
 ::-webkit-scrollbar {
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   width: 13px;
   height: 8px;
 }
@@ -85,7 +87,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   background: #888;
   box-shadow: 10px 15px 5px #4d4d4d inset;
 }
@@ -187,7 +189,7 @@ h1 {
 
 .skill-card {
   background-color: white;
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   margin: 20px auto;
   width: 95%;
   padding-bottom: 30px;
@@ -259,7 +261,7 @@ h1 {
 
 .project-tile {
   background-color: white;
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   width: 95%;
   max-width: 450px;
   margin: 0 auto 20px;
@@ -271,7 +273,7 @@ h1 {
 }
 
 .project-tile > a > img {
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -304,7 +306,7 @@ input,
 textarea {
   display: block;
   border: none;
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   margin: 20px auto;
   padding: 10px;
   width: 500px;
@@ -321,7 +323,7 @@ textarea:focus {
 
 .submit-btn {
   background-color: var(--submit-btn-background);
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   width: 100px;
   color: var(--white);
   font-size: 1.3rem;
@@ -345,7 +347,7 @@ textarea:focus {
 .icon-container {
   background-color: var(--icon-container-background);
   border: 2px solid var(--icon-container-border);
-  border-radius: 30px;
+  border-radius: var(--border-radius);
   margin: 0 20px;
   width: 60px;
   height: 60px;
