--- a/styles.css
+++ b/styles.css
@@ -132,18 +132,22 @@ h1 {
 }
 
 #navbar > ul > a {
+  box-sizing: content-box;
   padding: 5px;
-  text-decoration: none;
+  text-decoration: underline var(--main-color) 2px;
   font-size: 1.2rem;
   color: white;
-  transition: background-color 0.2s ease-out, color 0.2s ease-out;
+  transition: background-color 0.5s ease-out, text-decoration 0.5s ease-out,
+    color 0.5s ease-outut;
 }
 
 #navbar > ul > a:hover {
+  box-sizing: content-box;
   background-color: var(--navbar-ul-a-backgorund-hover);
   text-decoration: underline var(--navbar-ul-a-hover) 2px;
   color: var(--navbar-ul-a-hover);
-  transition: background-color 0.2s ease-out, color 0.2s ease-out;
+  transition: background-color 0.5s ease-out, text-decoration 0.5s ease-out,
+    color 0.5s ease-out;
 }
 
 #welcome-section {
@@ -322,18 +326,23 @@ textarea:focus {
 
 .submit-btn {
   background-color: var(--submit-btn-background);
+  border: 2px solid;
+  border-color: var(--submit-btn-background);
   border-radius: var(--border-radius);
   width: 100px;
   font-size: 1.3rem;
   color: var(--white);
   cursor: pointer;
-  transition: background-color 0.5s ease-out, color 0.5s ease-out;
+  transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
+    color 0.5s ease-out;
 }
 
 .submit-btn:hover {
-  background-color: var(--white);
+  background-color: var(--main-color);
+  border-color: var(--submit-btn-background);
   color: var(--submit-btn-background);
-  transition: background-color 0.5s ease-out, color 0.5s ease-out;
+  transition: background-color 0.5s ease-out, border-color 0.5s ease-out,
+    color 0.5s ease-out;
 }
 
 .submit-btn:focus {
