--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 
 :root {
   --border-radius: 30px;
+  --vertical-padding: 15px;
 
   --black: #222222;
   --lighter-black: #252934;
@@ -115,8 +116,10 @@ h1 {
 
 #navbar {
   position: fixed;
+  top: 0;
   background-color: var(--navbar-background);
-  max-width: 100%;
+  width: 100%;
+  height: 50px;
   display: flex;
   justify-content: space-around;
   z-index: 10;
@@ -152,15 +155,18 @@ h1 {
 
 #welcome-section {
   background-color: white;
-  padding: 120px 0 10px 0;
+  margin: 50px auto 10px;
   width: 100%;
   height: 100vh;
+
+  padding: var(--vertical-padding) 0;
   text-align: center;
 }
 
 .about-container {
+  margin: 50px auto 10px;
+  padding: 20px 0;
   width: 80%;
-  margin: 0 auto;
 }
 
 .about-heading {
@@ -177,7 +183,7 @@ h1 {
 #skills {
   background-color: var(--skills-background);
   min-height: 80vh;
-  padding: 15px 0;
+  padding: var(--vertical-padding) 0;
   text-align: center;
 }
 
@@ -248,7 +254,7 @@ h1 {
 #projects {
   background-color: var(--projects-background);
   min-height: 150vh;
-  padding: 50px 0 100px;
+  padding: var(--vertical-padding) 0;
   text-align: center;
 }
 
@@ -289,6 +295,8 @@ h1 {
 #contact {
   background-color: var(--contact-background);
   height: 70vh;
+  padding: var(--vertical-padding) 0;
+
   text-align: center;
   color: var(--contact-font);
 }
