--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ h1 {
   border-radius: var(--border-radius);
   margin: 20px auto;
   width: 95%;
-  padding-bottom: 30px;
+  padding: 30px 0;
 }
 
 .skill-icon-container {
@@ -211,7 +211,7 @@ h1 {
   border-radius: 50px;
   width: 80px;
   height: 80px;
-  margin: 50px auto;
+  margin: 10px auto;
 }
 
 .skill-icon-container > .fa-solid {
