--- a/styles.css
+++ b/styles.css
@@ -209,17 +209,17 @@ h1 {
   display: flex;
   background-color: var(--skills-icon-section-fa-solid-background);
   border-radius: 50px;
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   margin: 10px auto;
 }
 
-.skill-icon-container > .fa-solid {
+.fa-solid {
   color: white;
   position: relative;
-  top: 20px;
-  left: 18px;
-  font-size: 2.4rem;
+  top: 17px;
+  left: 14px;
+  font-size: 2.2rem;
 }
 
 .skill-text-section > h2 {
