Added coordinates to center skill icons in their parent elements.

--- a/styles.css
+++ b/styles.css
@@ -222,6 +222,14 @@ h1 {
   font-size: 2.2rem;
 }
 
+.fa-laptop-code {
+  left: 13px;
+}
+
+.fa-bug {
+  left: 17px;
+}
+
 .skill-text-section > h2 {
   margin-bottom: 30px;
   font-family: "Nanum Gothic Coding", monospace;
