Added max-width to input and textarea. Changed margin for padding rule on .icon-section. Increased such padding.

--- a/styles.css
+++ b/styles.css
@@ -335,6 +335,7 @@ textarea {
   margin: 20px auto;
   padding: 10px;
   width: 100%;
+  max-width: 500px;
   font-family: "europa", sans-serif;
 }
 
@@ -375,7 +376,7 @@ textarea:focus {
 .icon-section {
   display: flex;
   justify-content: center;
-  margin: 40px auto 0;
+  padding: 40px 0 80px;
 }
 
 .icon-container {
