--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,8 @@ h1 {
   background-color: white;
   margin: 50px auto 10px;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: fit-content;
 
   padding: var(--vertical-padding) 0;
   text-align: center;
@@ -166,7 +167,7 @@ h1 {
 .about-container {
   position: relative;
   top: 100px;
-  margin: 50px auto 10px;
+  margin: 50px auto 120px;
   width: 80%;
 }
 
