Added hamburger button and icon styles.

--- a/styles.css
+++ b/styles.css
@@ -153,6 +153,25 @@ h1 {
     color 0.5s ease-out;
 }
 
+#hamburger-btn {
+  position: relative;
+  top: 400px;
+  background-color: var(--action-color);
+  border-radius: var(--border-radius);
+  border: none;
+
+  display: block;
+  width: 75px;
+  height: 45px;
+}
+
+#hamburger-btn > i {
+  position: relative;
+  top: 2px;
+  left: 0;
+  font-size: 1.8rem;
+}
+
 #welcome-section {
   background-color: white;
   margin: 50px auto 10px;
