--- a/styles.css
+++ b/styles.css
@@ -114,12 +114,17 @@ h1 {
   font-size: 2.1rem;
 }
 
+li {
+  list-style-type: none;
+}
+
 #hamburger-btn {
   display: block;
   background-color: var(--action-color);
   border-radius: var(--border-radius);
   border: none;
 
+  margin-left: 5px;
   width: 75px;
   height: 45px;
   cursor: pointer;
@@ -137,25 +142,25 @@ h1 {
   top: 0;
   background-color: var(--navbar-background);
   width: 100%;
-  height: 50px;
-  /* display: flex; */
-  justify-content: space-around;
+  height: 60px;
+  padding: 8px 0;
+  /* justify-content: space-around; */
   z-index: 10;
 }
 
 .navbar-list {
+  background-color: var(--navbar-background);
   position: relative;
   top: -500%;
-  display: block;
-  list-style-type: none;
   margin: 5px auto;
+
   width: 100%;
   max-width: 700px;
   padding: 0;
   text-align: center;
 
   z-index: -1;
-  transition: 0.25s ease-out;
+  transition: 0.25s ease-in-out;
 }
 
 .navbar-list-active {
@@ -164,7 +169,6 @@ h1 {
 
 .navbar-list > a {
   box-sizing: content-box;
-  background-color: var(--navbar-background);
   display: block;
   padding: 5px;
   width: 100%;
