--- a/styles.css
+++ b/styles.css
@@ -130,11 +130,26 @@ li {
   cursor: pointer;
 }
 
-#hamburger-btn > i {
-  position: relative;
-  top: 2px;
-  left: 0;
-  font-size: 1.8rem;
+.bar {
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: white;
+}
+
+#hamburger-btn.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+#hamburger-btn.active .bar:nth-child(1) {
+  transform: translateY(8px) rotate(45deg);
+}
+
+#hamburger-btn.active .bar:nth-child(3) {
+  transform: translateY(-8px) rotate(-45deg);
 }
 
 #navbar {
